// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleContainer renders, no optional fields 1`] = `
<div
  className="collapsible-container"
>
  <div
    className="title-container"
  >
    <button
      aria-controls="content-container-test-id"
      aria-expanded="false"
      aria-label="button aria label"
      className="collapsible-control"
    >
      <div>
        this is the visible heading content
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-test-id"
  >
    <div>
       this is the collapsible content 
    </div>
  </div>
</div>
`;

exports[`CollapsibleContainer renders, with extra class name for the container div 1`] = `
<div
  className="collapsible-container extra-class-name"
>
  <div
    className="title-container"
  >
    <button
      aria-controls="content-container-test-id"
      aria-expanded="false"
      aria-label="button aria label"
      className="collapsible-control"
    >
      <div>
        this is the visible heading content
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-test-id"
  >
    <div>
       this is the collapsible content 
    </div>
  </div>
</div>
`;

exports[`CollapsibleContainer renders, with heading level for the title container 1`] = `
<div
  className="collapsible-container"
>
  <div
    aria-level={5}
    className="title-container"
    role="heading"
  >
    <button
      aria-controls="content-container-test-id"
      aria-expanded="false"
      aria-label="button aria label"
      className="collapsible-control"
    >
      <div>
        this is the visible heading content
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    className="collapsible-content"
    id="content-container-test-id"
  >
    <div>
       this is the collapsible content 
    </div>
  </div>
</div>
`;
